force-app/main/default/objects/Claim_Line_Items__c/Claim_Line_Items__c.object-meta.xml
<CustomObject>
    <description>This object is used to store procedure level details related to a claim.</description>
    <label>Claim Procedure Line Item</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Claim Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Procedure Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>