force-app/main/default/objects/Claim_Line_Items__c/fields/Amount_Paid_by_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_by_Insurance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The monetary sum covered by the insurance provider.</description>
    <label>Amount Paid by Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>