force-app/main/default/objects/Claim_Line_Items__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents claim associated with claim line item.</description>
    <label>Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>Claim_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>