force-app/main/default/objects/Claim_Line_Items__c/fields/Claim_Procedure_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Claim_Procedure_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the parent claim line item.</description>
    <label>Parent Claim Procedure Line Item</label>
    <referenceTo>Claim_Line_Items__c</referenceTo>
    <relationshipLabel>Claim Procedure Line Items</relationshipLabel>
    <relationshipName>Claim_Procedure_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>