force-app/main/default/objects/Claim_Line_Items__c/fields/Contracted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Denote the agreed-upon payment amount between the healthcare provider and the insurance company.</description>
    <label>Contracted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>