force-app/main/default/objects/Claim_Line_Items__c/fields/CPT_HCPCS_Code__c.field-meta.xml
<CustomField>
    <fullName>CPT_HCPCS_Code__c</fullName>
    <description>Represents the alphanumeric code describing a specific medical procedure.</description>
    <label>CPT/HCPCS Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>