force-app/main/default/objects/Claim_Line_Items__c/fields/Days_Units__c.field-meta.xml
<CustomField>
    <fullName>Days_Units__c</fullName>
    <description>Represents quantity or time duration of the provided medical service.</description>
    <label>Units/Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>