force-app/main/default/objects/Claim_Line_Items__c/fields/Diag_Ref__c.field-meta.xml
<CustomField>
    <fullName>Diag_Ref__c</fullName>
    <description>Represents a reference to the diagnosed condition for the line item.</description>
    <label>Diag_Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>