force-app/main/default/objects/Claim_Line_Items__c/fields/Diagnosis_Pointer__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Pointer__c</fullName>
    <description>Indicate the relationship between a patient’s diagnosis and the services or procedures that are performed.</description>
    <label>Diagnosis Pointer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>