force-app/main/default/objects/Claim_Line_Items__c/fields/EMG__c.field-meta.xml
<CustomField>
    <fullName>EMG__c</fullName>
    <description>Stands for emergency and should be completed only to indicate an emergency service. Enter a “Y” to indicate an emergency service. Leave it blank if services were non-emergent.</description>
    <label>EMG</label>
    <length>4</length>
    <type>Text</type>
</CustomField>