force-app/main/default/objects/Claim_Line_Items__c/fields/EPSTD__c.field-meta.xml
<CustomField>
    <fullName>EPSTD__c</fullName>
    <description>This code lets the insurance know the referral status and may be specific to each payer.</description>
    <inlineHelpText>When EPSDT services are reported on this claim, identify the status of the referral by entering one of the following reason codes given in this area of the field</inlineHelpText>
    <label>EPSDT</label>
    <length>4</length>
    <type>Text</type>
</CustomField>