force-app/main/default/objects/Claim_Line_Items__c/fields/ERA_Received__c.field-meta.xml
<CustomField>
    <fullName>ERA_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an Electronic Remittance Advice has been received (used for technical purposes).</description>
    <label>ERA Received</label>
    <type>Checkbox</type>
</CustomField>