force-app/main/default/objects/Claim_Line_Items__c/fields/Family_Plan__c.field-meta.xml
<CustomField>
    <fullName>Family_Plan__c</fullName>
    <description>Specifies if the claim is part of a family plan.</description>
    <inlineHelpText>When there is a requirement to report this is a Family Planning service, enter Y for “YES” in area of the field</inlineHelpText>
    <label>Family Plan</label>
    <type>TextArea</type>
</CustomField>