force-app/main/default/objects/Claim_Line_Items__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>Represents the starting date for the service or procedure.</description>
    <label>From Date</label>
    <type>Date</type>
</CustomField>