force-app/main/default/objects/Claim_Line_Items__c/fields/From_Date_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>From_Date_Of_Service__c</fullName>
    <description>Signifies the initiation date of the healthcare service.</description>
    <label>From Date Of Service</label>
    <type>Date</type>
</CustomField>