force-app/main/default/objects/Claim_Line_Items__c/fields/ICD_Codes__c.field-meta.xml
<CustomField>
    <fullName>ICD_Codes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the line item with the diagnosis code.</description>
    <label>ICD Codes</label>
    <referenceTo>ICD_Codes__c</referenceTo>
    <relationshipLabel>Claim Procedure Line Items</relationshipLabel>
    <relationshipName>Claim_Procedure_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>