force-app/main/default/objects/Claim_Line_Items__c/fields/ID_Qual__c.field-meta.xml
<CustomField>
    <fullName>ID_Qual__c</fullName>
    <description>Denotes Identifier Qualifier, specifying the type of ID used in the claim.</description>
    <label>ID Qual.</label>
    <length>4</length>
    <type>Text</type>
</CustomField>