force-app/main/default/objects/Claim_Line_Items__c/fields/Integration_Order__c.field-meta.xml
<CustomField>
    <fullName>Integration_Order__c</fullName>
    <label>Integration Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>