force-app/main/default/objects/Claim_Line_Items__c/fields/Modifier_3__c.field-meta.xml
<CustomField>
    <fullName>Modifier_3__c</fullName>
    <description>Represents the two digits code modifying the description of the procedure.</description>
    <label>Modifier 3</label>
    <length>225</length>
    <type>Text</type>
</CustomField>