force-app/main/default/objects/Claim_Line_Items__c/fields/Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Patient_Responsibility__c</fullName>
    <description>Indicates the portion of the claim amount the patient is responsible for.</description>
    <formula>Procedure_Charge__c  - ( Total_Adjustment__c  +  Amount_Paid_by_Insurance__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>