force-app/main/default/objects/Claim_Line_Items__c/fields/Place_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service__c</fullName>
    <description>Indicates the location where the healthcare service was provided</description>
    <label>Place of Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>