force-app/main/default/objects/Claim_Line_Items__c/fields/Place_of_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service_Code__c</fullName>
    <description>Represents the two-digit code, which indicates the specific location where the service was rendered.</description>
    <label>Place of Service Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>