force-app/main/default/objects/Claim_Line_Items__c/fields/Place_of_Service_Code_s__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service_Code_s__c</fullName>
    <description>Multiple place of service codes indicating various service locations.</description>
    <label>Place of Service Code(s)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>