force-app/main/default/objects/Claim_Line_Items__c/fields/Place_of_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service_Name__c</fullName>
    <description>Denotes the descriptive name for the service location</description>
    <label>Place of Service Name</label>
    <type>TextArea</type>
</CustomField>