force-app/main/default/objects/Claim_Line_Items__c/fields/Primary_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents the modification amount made to the claim amount.</description>
    <label>Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>