force-app/main/default/objects/Claim_Line_Items__c/fields/Primary_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Primary_Allowed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The approved amount for reimbursement by the insurance provider.</description>
    <label>Allowed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>