force-app/main/default/objects/Claim_Line_Items__c/fields/Primary_Billed__c.field-meta.xml
<CustomField>
    <fullName>Primary_Billed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents the total amount initially billed for the service.</description>
    <label>Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>