force-app/main/default/objects/Claim_Line_Items__c/fields/Primary_Other_Insurance_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Other_Insurance_Responsibility__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Primary Other Insurance Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>