force-app/main/default/objects/Claim_Line_Items__c/fields/Primary_Paid__c.field-meta.xml
<CustomField>
    <fullName>Primary_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents the total amount paid by the insurance provider.</description>
    <label>Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>