force-app/main/default/objects/Claim_Line_Items__c/fields/Primary_Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Primary_Patient_Responsibility__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Represents the Primary amount that is pending on the patient to pay after primary insurance has been received.</description>
    <label>Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>