force-app/main/default/objects/Claim_Line_Items__c/fields/Proc_code__c.field-meta.xml
<CustomField>
    <fullName>Proc_code__c</fullName>
    <description>Indicates a unique Procedure code.</description>
    <label>Proc code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>