force-app/main/default/objects/Claim_Line_Items__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate the procedure with the Claim line item.</description>
    <label>Procedure</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>Claim_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>