force-app/main/default/objects/Claim_Line_Items__c/fields/Procedure_Charge__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the cost associated with the associated procedure.</description>
    <label>Procedure Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>