force-app/main/default/objects/Claim_Line_Items__c/fields/Rendering_Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_Address__c</fullName>
    <description>Address of the healthcare provider who performed the service.</description>
    <label>Rendering Provider Address</label>
    <type>TextArea</type>
</CustomField>