force-app/main/default/objects/Claim_Line_Items__c/fields/Rendering_Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_First_Name__c</fullName>
    <description>Represents the first name of the healthcare provider.</description>
    <label>Rendering Provider First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>