force-app/main/default/objects/Claim_Line_Items__c/fields/Rendering_Provider_Non_NPI__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_Non_NPI__c</fullName>
    <description>Identifier for the healthcare provider without using NPI.</description>
    <label>Rendering Provider (Non NPI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>