force-app/main/default/objects/Claim_Line_Items__c/fields/Rendering_Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_NPI__c</fullName>
    <description>National Provider Identifier for the healthcare provider.</description>
    <label>Rendering Provider (NPI)</label>
    <type>TextArea</type>
</CustomField>