force-app/main/default/objects/Claim_Line_Items__c/fields/Rendering_Provider_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_Taxonomy__c</fullName>
    <description>Represents the taxonomy of the healthcare provider.</description>
    <label>Rendering Provider Taxonomy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>