force-app/main/default/objects/Claim_Line_Items__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>Denote the ending date for the service or procedure.</description>
    <label>To Date</label>
    <type>Date</type>
</CustomField>