force-app/main/default/objects/Claim_Line_Items__c/fields/To_Date_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>To_Date_Of_Service__c</fullName>
    <description>Completion date of the healthcare service.</description>
    <label>To Date Of Service</label>
    <type>Date</type>
</CustomField>