force-app/main/default/objects/Claim_Line_Items__c/fields/Total_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Denote the overall adjustment made to the claim amount.</description>
    <label>Total Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>