force-app/main/default/objects/Claim_Line_Items__c/fields/Total_Allowed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Allowed_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Denote the total approved amount for reimbursement.</description>
    <label>Total Allowed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>