force-app/main/default/objects/Claim_Line_Items__c/fields/Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Denote the sum of all charges initially billed for the claim.</description>
    <label>Total Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>