force-app/main/default/objects/Claim_Line_Items__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Overall amount paid, including patient responsibility and insurance coverage.</description>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>