force-app/main/default/objects/Claim_Line_Items__c/fields/Total_Patient_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Total_Patient_Responsibility__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Aggregate amount the patient is responsible for in the entire claim.</description>
    <label>Total Patient Responsibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>