force-app/main/default/objects/Claim_Line_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Claim__c</columns>
    <columns>Procedure__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>